--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Sunil Wahal"
-  avatar           : "profile.png"
+  avatar           : "Sunil_Wahal.jpg"
   bio              : "Jack D. Furst Professor of Finance at Arizona State University"
   location         : "Tempe, Arizona"
   employer         : 
