--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Sunil Wahal"
 title_separator          : "-"
 name                     : &name "Sunil Wahal"
 description              : &description "Jack D. Furst Professor of Finance at Arizona State University"
-url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://swahal.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "swahal/swahal.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
